[tool.poetry]
name = "oidc-lab-scripts"
version = "0.1.0"
description = ""
authors = ["FriesSec <christian.fries123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
cmd2 = "^2.4.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
